--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Build the Docker image
       run: docker compose build
     - name: Runs the tests
-      run: docker compose up
+      run: docker compose up --exit-code-from tests
     - name: Stops docker
       run: docker compose down
