--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,17 +6,17 @@ on:
   pull_request:
     branches: [ main ]
 
-jobs:
+#jobs:
 
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker compose build
-    - name: Runs the tests
-      run: docker compose up #--exit-code-from tests
-    - name: Stops docker
-      run: docker compose down
+#  build:
+#
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#    - uses: actions/checkout@v3
+#    - name: Build the Docker image
+#      run: docker compose build
+#    - name: Runs the tests
+#      run: docker compose up #--exit-code-from tests
+#    - name: Stops docker
+#      run: docker compose down
